[package]
name = "ik-geo"
version = "0.1.2"
edition = "2021"
license-file = "LICENSE"
README = "README.md"
repository = "https://github.com/Verdant-Evolution/ik-geo-rust"
keywords = ["robot", "robotics", "kinematics", "inverse-kinematics", "ik-geo"]
description = "Geometric solutions to inverse kinematics, using the IK-Geo algorithm"
categories = ["science::robotics"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
nalgebra = "0.33.0"
fastrand = "2.3.0"
nlopt = "0.8.1"

[dev-dependencies.criterion]
version = "0.3"
features = [ "html_reports" ]

[dev-dependencies]
rand = "0.9.0"
rand_seeder = "0.4.0"
rand_pcg = "0.9.0"

[lib]
name = "ik_geo"
path = "src/lib.rs"
doctest = false



